--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
               display:flex;
           }div{
               background-image:radial-gradient(blue,cyan,navy,skyblue);
-              width:200px;
-              height:255px;
-              padding-top:5px;
+              width:90%;
+              height:100%;
+              padding:10px;
               box-shadow:0px 0px 5px gray;  
          }input{
-              height:30px;
-              width:40px;
+              height:90%;
+              width:90%;
               margin-top:3px;
               font-size:21px;
               font-weight:bold;
