--- a/index.html
+++ b/index.html
@@ -5,21 +5,26 @@
               text-align:center;
               justify-content:center;
               display:flex;
+              padding: 10px;
           }div{
               background-image:radial-gradient(blue,cyan,navy,skyblue);
               width:90%;
-              height:100%;
-              padding:10px;
+              height:50%;
+              padding:70px 8px;
               box-shadow:0px 0px 5px gray;  
+              margin-top: 30px;
          }input{
-              height:90%;
-              width:90%;
-              margin-top:3px;
-              font-size:21px;
+              height:150px;
+              width:150px;
+              margin:8px;
+              font-size:5rem;
               font-weight:bold;
+              text-align: center;
          }#t{
-              width:180px;
-              text-indent:5px;
+              width:90%;
+              text-indent:50px;
+              border-radius: 0px;
+              margin-top: 70px;
          }input:hover{
               background:transparent;
               border:none;
@@ -27,10 +32,8 @@
               box-shadow:0px 0px 2px gray;
          }b{
            color:white;
-           fontsize:20px;
+           font-size:7rem;
            line-height:25px;
-         }#eq{
-           width:85px;
          }
     </style>
        <script>
