--- a/index.html
+++ b/index.html
@@ -70,14 +70,13 @@
       <input type="button" value="4" onClick = "fun(this)">
       <input type="button" value="5" onClick = "fun(this)">
       <input type="button" value="6" onClick = "fun(this)">
-      <input type="button" value="%" onClick = "fun(this)"><br>
+      <input type="button" value="." onClick = "fun(this)"><br>
       <input type="button" value="7" onClick = "fun(this)">
       <input type="button" value="8" onClick = "fun(this)">
       <input type="button" value="9" onClick = "fun(this)">
       <input type="button" value="x" onClick = "fun(this)"><br>
         <input type="button" value="0" onClick = "fun(this)">
       <input type="button" id = "eq" value="=" onClick = "fun(this)">
-      <input type="button" value="." onClick = "fun(this)">
     </div>  
   </body>  
 </html>
